# ohada-financial-extractor

./: .bumpversion.toml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  SECURITY.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  ci.yml  commitlint.yml  publish.yml  release.yml
.ollamassist/conversations/: 2e1b79c7-971f-49b2-8b01-e58e752760c0.json  2eb18753-371f-471e-88ec-e680f30ff02d.json  371f521a-fb55-4ee9-bd98-8c027f1b8a4b.json
docs/: OHADA_STANDARDS.md  OUTPUT_SCHEMA.md  README.md
examples/: basic_extraction.py  batch_processing.py  example_metadata_extraction.py  example_notes_usage.py  example_visualization_streamlit.py  output_extraction.json
examples/data/: DSF_Normal_Tantanpion_2024.xlsx  DSF_Normal_Tantanpion_2025.xlsx  sample_ohada_statement_2024.xlsx  ~$DSF_Normal_Tantanpion_2024.xlsx
examples/output/: company_metadata.json  notes_export.json
scripts/: generate_sample_data.py
src/ohada_extractor/: __init__.py  _version.py
src/ohada_extractor/core/: __init__.py  extractor.py  metadata_extractor.py  schemas.py  statement.py
src/ohada_extractor/formatters/: __init__.py  data_cleaners.py  json_formatter.py
src/ohada_extractor/parsers/: __init__.py
src/ohada_extractor/validation/: coherence_validator.py
src/ohada_extractor/visualization/: __init__.py  base_plotter.py  utils.py
src/ohada_extractor/visualization/dynamic/: plot_dynamic_all.py  plot_dynamic_overview.py  plot_dynamic_single.py  plot_dynamic_summary.py  plot_dynamic_tabs.py
src/ohada_extractor/visualization/static/: plot_static_all.py  plot_static_single.py  plot_static_summary.py
src/ohada_extractor/visualization/themes/: colors.py  styles.py  templates.py
tests/: test_basic_extraction.py  test_json_output.py
