[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ohada-financial-extractor"
version = "0.1.2"
description = "Extract and normalize financial data from OHADA-compliant Excel financial statements (DSF)"
readme = { file = "docs/README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Leonel B. Kamguia Wabo", email = "bomyr.kamguia@bkresearchandanalytics.com"},
    {name = "Ronald V. Ndayou", email = "ronald.ndayou@bkresearchandanalytics.com"},
]
keywords = ["OHADA", "financial-extraction", "accounting", "Excel", "financial statements"]

[project.urls]
Repository = "https://github.com/bomyrk/ohada-financial-extractor"
Issues = "https://github.com/bomyrk/ohada-financial-extractor/issues"

[tool.black]
target-version = ["py310"]
line-length = 88