[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ohada-financial-extractor"
description = "Extract and normalize financial data from OHADA-compliant Excel financial statements (DSF)"
readme = { file = "docs/README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    {name = "Kamguia Wabo, Leonel B. ", email = "bomyr.kamguia@bkresearchandanalytics.com"},
    {name = "Ndayou, Ronald V. ", email = "ronald.ndayou@bkresearchandanalytics.com"},
]

keywords = ["OHADA", "financial-extraction", "accounting", "Excel", "financial statements"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

dependencies = [
    "openpyxl>=3.1.5",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "xarray>=0.21.0",
    "pyqt5>=5.15.11",
    "matplotlib>=3.10.1",
    "plotly>=6.5.0",
    "streamlit>=1.56.0"
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "pytest-cov>=2.12.0"]

[project.urls]
Repository = "https://github.com/bomyrk/ohada-financial-extractor"
Issues = "https://github.com/bomyrk/ohada-financial-extractor/issues"

# IMPORTANT : setuptools_scm gère la version automatiquement
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/ohada_financial_extractor/_version.py"

[tool.black]
target-version = ["py310"]
line-length = 88
